crates/shipper-schema/src/snapshots/shipper_schema__tests__snapshot_parse_boundary_values.snap
---
source: crates/shipper-schema/src/lib.rs
assertion_line: 218
expression: results
---
[
    (
        "shipper.x.v0",
        Some(
            0,
        ),
    ),
    (
        "shipper.x.v1",
        Some(
            1,
        ),
    ),
    (
        "shipper.x.v4294967295",
        Some(
            4294967295,
        ),
    ),
]
