crates/shipper-schema/src/snapshots/shipper_schema__tests__snapshot_parse_err_invalid_format.snap
---
source: crates/shipper-schema/src/lib.rs
assertion_line: 185
expression: "parse_schema_version(\"invalid\").map_err(|e| e.to_string())"
---
Err(
    "invalid schema version format: invalid",
)
