crates/shipper-schema/src/snapshots/shipper_schema__tests__snapshot_parse_err_non_numeric.snap
---
source: crates/shipper-schema/src/lib.rs
assertion_line: 190
expression: "parse_schema_version(\"shipper.receipt.vx\").map_err(|e| e.to_string())"
---
Err(
    "invalid version number in schema version: shipper.receipt.vx",
)
