crates/shipper-schema/src/snapshots/shipper_schema__tests__snapshot_parse_multiple_document_types.snap
---
source: crates/shipper-schema/src/lib.rs
expression: results
---
[
    (
        "receipt",
        Some(
            1,
        ),
    ),
    (
        "state",
        Some(
            1,
        ),
    ),
    (
        "events",
        Some(
            1,
        ),
    ),
    (
        "lock",
        Some(
            1,
        ),
    ),
]
