crates/shipper-schema/src/snapshots/shipper_schema__tests__snapshot_parse_ok_result.snap
---
source: crates/shipper-schema/src/lib.rs
assertion_line: 180
expression: "parse_schema_version(\"shipper.receipt.v42\")"
---
Ok(
    42,
)
