crates/shipper-schema/src/snapshots/shipper_schema__tests__snapshot_validate_ok.snap
---
source: crates/shipper-schema/src/lib.rs
assertion_line: 195
expression: "validate_schema_version(\"shipper.state.v3\", \"shipper.state.v1\", \"state\")"
---
Ok(
    (),
)
